Fix overlapping graph nodes for joins
Change the styling so that nodes with long operator names don't overlap.

Fixes: #116

--- a/arroyo-console/src/routes/pipelines/pipelines.css
+++ b/arroyo-console/src/routes/pipelines/pipelines.css
@@ -10,7 +10,7 @@
 .pipelineGraph .pipelineGraphNode {
   padding: 10px;
   border-radius: 3px;
-  width: 150px;
+  width: 200px;
   font-size: 12px;
   color: #222;
   text-align: center;
